# zed-container-use-mcp

./: Cargo.toml  README.md  extension.toml
configuration/: default_settings.jsonc  installation_instructions.md
src/: container_use_mcp.rs
