[package]
name = "container_use_mcp"
version = "0.0.1"
edition = "2021"
publish = false
license = "Apache-2.0"

[lib]
path = "src/container_use_mcp.rs"
crate-type = ["cdylib"]

[dependencies]
serde = "1.0"
schemars = "0.8"
zed_extension_api = "0.5.0"

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
strip = true # Ensures debug symbols are removed.

